fix: reduce excessive white space between homepage sections
Sections were designed for full-page scroll (100vh) layout with generous
padding/margins. Now that sections are auto-height, reduce spacing:
- #sectionEducation padding: 130px → 80px
- .questionnes padding-top: 100px → 40px
- #sectionEducation .blockSlider margin-top: 130px → 40px
- #sectionUniversities margin: 100px → 40px
- #sectionJoinUs padding-bottom: 100px → 40px
- #sectionJoinUs .blockHeader margin-bottom: 150px → 40px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1006,7 +1006,7 @@ nav ul li a {
 
 /* section two */
 #sectionEducation {
-    padding: 130px 0 0 0;
+    padding: 80px 0 0 0;
     /* overflow-x: hidden; */
     z-index: 2;
     position: relative;
@@ -1034,7 +1034,7 @@ nav ul li a {
 }
 
 #sectionEducation .blockSlider {
-    margin: 130px 0 0 68px;
+    margin: 40px 0 0 68px;
     position: relative;
 }
 
@@ -1198,7 +1198,7 @@ body .swiper-button-next {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    padding-top: 100px;
+    padding-top: 40px;
     gap: 65px;
     position: relative;
 }
@@ -1530,8 +1530,8 @@ button.btnBack.active{
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     z-index: 2;
     position: relative;
 }
@@ -1624,14 +1624,14 @@ button.btnBack.active{
     flex-direction: column;
     text-align: center;
     padding-top: 0;
-    padding-bottom: 100px;
+    padding-bottom: 40px;
     z-index: 2;
     position: relative;
 }
 
 #sectionJoinUs .blockHeader {
     width: 60%;
-    margin-bottom: 150px;
+    margin-bottom: 40px;
 }
 
 #sectionJoinUs .blockHeader .title {
